[package]
name = "domain-core"
version = "0.3.1"
authors = ["Martin Hoffmann <hn@nvnc.de>"]
description = "A DNS library for Rust – Core."
documentation = "https://docs.rs/domain-core/"
homepage = "https://github.com/nlnetlabs/domain/"
repository = "https://github.com/nlnetlabs/domain/"
readme = "README.md"
keywords = ["DNS", "domain"]
license = "BSD-3-clause"

[lib]
name = "domain_core"
path = "src/lib.rs"

[dependencies]
bytes          = "^0.4"
chrono         = "^0.4"
rand           = "^0.6"
failure        = "^0.1"
failure_derive = "^0.1"
void           = "^1.0"

