[package]
name = "domain-core"
version = "0.5.0-pre"
edition = "2018"
authors = ["Martin Hoffmann <martin@nlnetlabs.nl>"]
description = "A DNS library for Rust – Core."
documentation = "https://docs.rs/domain-core/"
homepage = "https://github.com/nlnetlabs/domain/"
repository = "https://github.com/nlnetlabs/domain/"
readme = "README.md"
keywords = ["DNS", "domain"]
license = "BSD-3-Clause"

[lib]
name = "domain_core"
path = "src/lib.rs"

[dependencies]
chrono         = "0.4"
derive_more    = "0.99.1"
rand           = "0.7"
unwrap         = "1.2"
void           = "1.0"

bytes          = { version = "^0.5", optional = true }
smallvec       = { version = "1.2", optional = true }

[features]
default = ["std"]
std = []
