[package]
name = "domain-resolv"
version = "0.4.1"
authors = ["Martin Hoffmann <hn@nvnc.de>"]
description = "An asynchronous DNS stub resolver."
documentation = "https://docs.rs/domain-core/"
homepage = "https://github.com/nlnetlabs/domain/"
repository = "https://github.com/nlnetlabs/domain/"
readme = "README.md"
keywords = ["DNS", "domain", "resolver", "futures"]
license = "BSD-3-Clause"

[lib]
name = "domain_resolv"
path = "src/lib.rs"

[dependencies]
futures        = "^0.1"
rand           = "^0.6"

[dependencies.tokio]
version = "0.1.19"
default-features = false
features = ["io", "rt-full", "tcp", "udp"]


[dev-dependencies]
native-tls = "^0.2"
tokio-tls = "^0.2"

[dependencies.domain-core]
path = "../domain-core"
version = "0.4.1"

