[package]
name = "domain-resolv"
version = "0.5.0-bis"
edition = "2018"
authors = ["Martin Hoffmann <hn@nvnc.de>"]
description = "An asynchronous DNS stub resolver."
documentation = "https://docs.rs/domain-core/"
homepage = "https://github.com/nlnetlabs/domain/"
repository = "https://github.com/nlnetlabs/domain/"
readme = "README.md"
keywords = ["DNS", "domain", "resolver", "futures"]
license = "BSD-3-Clause"

[lib]
name = "domain_resolv"
path = "src/lib.rs"

[dependencies]
bytes    = "0.5.4"
futures  = "0.3.4"
rand     = "0.7"
smallvec = "1.2"
tokio    = { version = "0.2.13", features = ["io-util", "macros", "tcp", "time", "udp"] }

[dev-dependencies]
native-tls = "^0.2"
tokio-tls = "^0.3.0"

[dependencies.domain]
path = "../domain"
version = "0.5.1-bis"
features = ["bytes", "smallvec", "std"]

[features]
sync = [ "tokio/rt-core" ]

[[example]]
name = "sync"
required-features = ["sync"]

