[package]
name = "domain-sign"
version = "0.4.1"
edition = "2018"
authors = ["Martin Hoffmann <martin@nlnetlabs.nl>"]
description = "A DNS library for Rust – DNSSEC signing."
documentation = "https://docs.rs/domain-validate/"
homepage = "https://github.com/nlnetlabs/domain/"
repository = "https://github.com/nlnetlabs/domain/"
readme = "README.md"
keywords = ["DNS", "DNSSEC", "domain"]
license = "BSD-3-Clause"

[lib]
name = "domain_sign"
path = "src/lib.rs"

[dependencies]
bytes 		= "0.5"
derive_more	= "^0.15"
openssl		= { version = "^0.10", optional = true }
ring		= { version = "0.16", optional = true }
unwrap      = "^1.2"

[dependencies.domain-core]
path = "../domain-core"
version = "0.5.0-pre"
features = ["bytes"]

[features]
ringsigner = ["ring"]
default = ["ringsigner"]
