[package]
name = "domain-tsig"
version = "0.5.0-pre"
edition = "2018"
authors = ["Martin Hoffmann <martin@nlnetlabs.nl>"]
description = "A DNS library for Rust – TSIG Support."
documentation = "https://docs.rs/domain-tsig/"
homepage = "https://github.com/nlnetlabs/domain/"
repository = "https://github.com/nlnetlabs/domain/"
readme = "README.md"
keywords = ["DNS", "domain"]
license = "BSD-3-Clause"

[lib]
name = "domain_tsig"
path = "src/lib.rs"

[dependencies]
bytes          = "^0.4"
derive_more    = "^0.99"
ring           = "0.16"
smallvec       = "1.0"
unwrap         = "1.2"

[dependencies.domain-core]
path = "../domain-core"
version = "0.5.0-pre"
features = ["std", "smallvec"]

