[package]
name = "domain"
version = "0.4.1"
edition = "2018"
authors = ["Martin Hoffmann <martin@nlnetlabs.nl>"]
description = "A DNS library for Rust – Meta Crate."
documentation = "https://docs.rs/domain"
homepage = "https://github.com/nlnetlabs/domain/"
repository = "https://github.com/nlnetlabs/domain/"
readme = "README.md"
keywords = ["DNS", "domain", "resolver", "futures"]
license = "BSD-3-Clause"

[features]
resolv   = ["domain-resolv"]
sign     = ["domain-sign"]
tsig     = ["domain-tsig"]
validate = ["domain-validate"]

[dependencies.domain-core]
path = "../domain-core"
version = "0.4.1"

[dependencies.domain-resolv]
path = "../domain-resolv"
version = "0.4.1"
optional = true

[dependencies.domain-sign]
path = "../domain-sign"
version = "0.4.1"
optional = true

[dependencies.domain-tsig]
path = "../domain-tsig"
version = "0.4.1"
optional = true

[dependencies.domain-validate]
path = "../domain-validate"
version = "0.4.1"
optional = true

