[package]
name = "domain"
version = "0.5.2-bis"
edition = "2018"
authors = ["Martin Hoffmann <martin@nlnetlabs.nl>"]
description = "A DNS library for Rust."
documentation = "https://docs.rs/domain"
homepage = "https://github.com/nlnetlabs/domain/"
repository = "https://github.com/nlnetlabs/domain/"
readme = "README.md"
keywords = ["DNS", "domain"]
license = "BSD-3-Clause"

[lib]
name = "domain"
path = "src/lib.rs"

[dependencies]
rand           = "0.7"

bytes          = { version = "0.5.4", optional = true }
chrono         = { version = "0.4", optional = true }
#openssl       = { version = "0.10", optional = true }
ring           = { version = "0.16.14", optional = true }
smallvec       = { version = "1.2", optional = true }

[features]
default  = ["std"]
interop  = ["bytes", "ring"]
master   = ["std", "bytes", "chrono"]
sign     = ["std"]
std      = []
tsig     = ["bytes", "ring", "smallvec"]
validate = ["std", "ring"]

[[example]]
name = "readzone"
required-features = ["master"]

