[package]
name = "interop"
version = "0.1.0"
authors = ["Martin Hoffmann <hn@nvnc.de>"]
description = "Interop testing for the domain crate."
license = "BSD-3-Clause"

[dependencies]
domain-core   = { path = "../domain-core" }
domain-resolv = { path = "../domain-resolv" }
bytes         = "0.4"
ring          = "0.14"

