[package]
name = "interop"
version = "0.1.0"
edition = "2018"
authors = ["Martin Hoffmann <hn@nvnc.de>"]
description = "Interop testing for the domain crate."
license = "BSD-3-Clause"

[dependencies]
domain-core   = { path = "../domain-core" }
domain-resolv = { path = "../domain-resolv" }
domain-tsig   = { path = "../domain-tsig" }
bytes         = "0.5"
ring          = "0.16"
unwrap        = "1.2"

