[package]
name = "domain-macros"
description = "Procedural macros for the `domain` crate."
authors.workspace = true

version.workspace = true
rust-version.workspace = true
edition.workspace = true

homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

documentation = "https://docs.rs/domain-macros"

[lib]
proc-macro = true

[dependencies.proc-macro2]
version = "1.0"

[dependencies.syn]
version = "2.0"
features = ["full", "visit"]

[dependencies.quote]
version = "1.0"
